--- a/composer.json
+++ b/composer.json
@@ -10,23 +10,35 @@
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.13",
-        "fakerphp/faker": "^1.20",
+        "league/fractal": "^0.20.1",
+        "league/tactician-bundle": "^1.4",
+        "league/uri": "^6.8",
+        "league/uri-components": "^2.4",
+        "sensio/framework-extra-bundle": "^6.2",
+        "symfony/asset": "6.1.*",
         "symfony/console": "6.1.*",
-        "symfony/dotenv": "6.1.*",
-        "symfony/flex": "^2",
+        "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "6.1.*",
-        "symfony/polyfill-php80": "^1.26",
-        "symfony/polyfill-uuid": "^1.26",
+        "symfony/monolog-bundle": "^3.8",
+        "symfony/property-access": "6.1.*",
         "symfony/proxy-manager-bridge": "6.1.*",
         "symfony/runtime": "6.1.*",
+        "symfony/serializer": "6.1.*",
+        "symfony/uid": "6.1.*",
+        "symfony/validator": "6.1.*",
         "symfony/yaml": "6.1.*",
         "webmozart/assert": "^1.11"
+    },
+    "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "fakerphp/faker": "^1.20",
+        "roave/security-advisories": "dev-latest"
     },
     "config": {
         "allow-plugins": {
             "composer/package-versions-deprecated": true,
-            "symfony/flex": true,
-            "symfony/runtime": true
+            "symfony/runtime": true,
+            "symfony/flex": true
         },
         "optimize-autoloader": true,
         "preferred-install": {
@@ -73,8 +85,5 @@
             "allow-contrib": false,
             "require": "6.1.*"
         }
-    },
-    "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^3.4"
     }
 }
