--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "6.1.*",
         "symfony/monolog-bundle": "^3.8",
+        "symfony/phpunit-bridge": "^6.1",
         "symfony/property-access": "6.1.*",
         "symfony/proxy-manager-bridge": "6.1.*",
         "symfony/runtime": "6.1.*",
@@ -30,9 +31,12 @@
         "webmozart/assert": "^1.11"
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^7.1",
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "fakerphp/faker": "^1.20",
-        "roave/security-advisories": "dev-latest"
+        "phpunit/phpunit": "^9.5",
+        "roave/security-advisories": "dev-latest",
+        "symfony/browser-kit": "6.1.*"
     },
     "config": {
         "allow-plugins": {
